# control-ofc-gui

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  PWM_VERIFY_REMEDIATION.md  README.md  SECURITY.md  daemon-documentation.md  pyproject.toml
.githooks/: README.md  pre-commit
.github/workflows/: ci.yml  parity.yml  release-aur.yml  release.yml
completions/: _control-ofc-gui  control-ofc-gui.bash  control-ofc-gui.fish
docs/: 00_README_START_HERE.md  01_Product_Overview.md  02_System_Architecture_and_Boundaries.md  03_UX_UI_Principles_and_Visual_System.md  04_Dashboard_Spec.md  05_Controls_Profiles_and_Curves_Spec.md  06_Settings_Spec.md  07_Diagnostics_Spec.md  08_API_Integration_Contract.md  09_State_Model_Control_Loop_and_Lease_Behaviour.md  09_State_Model_and_Control_Behaviour.md  10_Demo_Mode_Spec.md  11_Persistence_Config_and_File_Layout.md  12_Implementation_Plan_and_Module_Structure.md  13_Acceptance_Criteria.md  14_Risks_Gaps_and_Future_Work.md  15_Branding_Art_and_Asset_Direction.md  16_User_Decisions_and_API_Notes_Reference.md  17_Claude_Kickoff_Prompt.md  18_Operations_Guide.md  19_Hardware_Compatibility.md  20_Sensor_Interpretation_Guide.md  21_AMD_Motherboard_Fan_Control_Guide.md  22_AMD_Sensor_Interpretation_Deep_Dive.md  23_Contract_Mismatch_Backlog.md  23_Intel_Motherboard_Fan_Control_Guide.md
docs/architecture/: daemon-end-to-end.md  openfan-controller-integration.md
man/: control-ofc-gui.1.scd
manual/: README.md  controls.md  dashboard.md  diagnostics.md  driver-setup.md  fan-wizard.md  getting-started.md  hardware-troubleshooting.md  openfan-controller.md  profiles-and-curves.md  settings.md  setup-checklist.md  understanding-fan-control.md
packaging/: .SRCINFO  PKGBUILD  control-ofc-gui.desktop  control-ofc-gui.install
packaging/aur/: .gitignore
scripts/: build_manual.sh  capture_screenshots.py  release-aur.sh
src/control_ofc/: __init__.py  colors.py  constants.py  main.py  paths.py
src/control_ofc/api/: __init__.py  client.py  errors.py  models.py
src/control_ofc/services/: __init__.py  app_settings_service.py  app_state.py  control_loop.py  daemon_service_check.py  demo_controller.py  demo_service.py  diagnostics_service.py  fan_grouping.py  history_store.py  lease_service.py  polling.py  profile_import_service.py  profile_service.py  series_selection.py  session_stats.py
src/control_ofc/ui/: __init__.py  about_dialog.py  branding.py  fan_display.py  fan_presence.py  hwmon_guidance.py  hwmon_label_resolver.py  main_window.py  microcopy.py  qt_util.py  sensor_knowledge.py  sidebar.py  splash.py  status_banner.py  theme.py
src/control_ofc/ui/pages/: controls_page.py  dashboard_page.py  diagnostics_page.py  diagnostics_readiness.py  diagnostics_workers.py  settings_page.py
src/control_ofc/ui/presets/: noctua_dark.json  solar_light.json
src/control_ofc/ui/widgets/: aio_config_dialog.py  card_metrics.py  card_resize.py  collapsible_section.py  control_card.py  curve_card.py  curve_edit_dialog.py  curve_editor.py  dashboard_inspector.py  draggable_flow.py  error_banner.py  event_log_view.py  fan_role_dialog.py  fan_wizard.py  fan_zone_card.py  member_editor.py  readiness_report.py  reorderable_flow.py  sensor_detail_dialog.py  sensor_series_panel.py  series_chooser_dialog.py  status_strip.py  summary_card.py  theme_editor.py  timeline_chart.py  warnings_dialog.py
src/onlyfans/: __init__.py  main.py  paths.py
src/onlyfans/api/: __init__.py  client.py  models.py
src/onlyfans/persistence/: __init__.py
src/onlyfans/services/: app_settings_service.py  app_state.py  control_loop.py  demo_service.py  diagnostics_service.py  history_store.py  lease_service.py  polling.py  profile_service.py  series_selection.py
src/onlyfans/ui/: about_dialog.py  branding.py  main_window.py  sidebar.py  splash.py  status_banner.py  theme.py
src/onlyfans/ui/pages/: __init__.py  controls_page.py  dashboard_page.py  diagnostics_page.py  settings_page.py
src/onlyfans/ui/widgets/: __init__.py  card_metrics.py  control_card.py  curve_card.py  curve_edit_dialog.py  curve_editor.py  draggable_flow.py  fan_role_dialog.py  fan_wizard.py  flow_layout.py  member_editor.py  sensor_series_panel.py  series_chooser_dialog.py  theme_editor.py  timeline_chart.py  warnings_dialog.py
tests/: conftest.py  test_aio_phase1.py  test_aio_phase2.py  test_am4_400_series_quirks.py  test_am5_600_series_quirks.py  test_amd_gpu_r35.py  test_api_version_skew.py  test_app_settings.py  test_app_state.py  test_audit_2026_05_06_remediation.py  test_audit_2026_06_05_remediation.py  test_audit_2026_06_12_cleanups.py  test_audit_v3_p1p2_regressions.py  test_audit_v3_regressions.py  test_boundary_conditions.py  test_branding.py  test_capability_gating.py  test_card_resize.py  test_card_sizing.py  test_chart_cliptoview_r71.py  test_chart_first_run_defaults.py  test_chart_modes.py  test_chart_polish.py  test_chart_theme_adherence.py  test_client.py  test_client_control_api.py  test_client_parse.py  test_client_transport_errors.py  test_collapsible_section.py  test_colors.py  test_configurable_paths.py  test_control_card.py  test_control_loop.py  test_control_loop_writes.py  test_controls_hardening_r26.py  test_controls_page_r23.py  test_controls_page_r25.py  test_controls_page_reconcile.py  test_controls_profile_switching.py  test_controls_r29.py  (+104 more)
tests/fixtures/: capabilities_no_telemetry.json  error_unavailable.json  error_validation.json  parity_vectors.json  role_classification.json  status_no_openfan.json  status_ok.json
