[project]
name = "control-ofc-gui"
version = "2.0.0"
description = "Desktop fan control GUI for the Control-OFC daemon"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "PySide6>=6.6,<7",
    "httpx>=0.27,<1",
    "pyqtgraph>=0.14,<1",
    # numpy 2.0 was a breaking API change; the real floor is >=2.0 (not 1.26).
    "numpy>=2.0,<3",
    # colorama is a load-bearing pyqtgraph load-time transitive — pyqtgraph
    # imports it unconditionally at module load but its metadata omits the dep,
    # so we declare it explicitly. Do not remove (DEC-103).
    "colorama>=0.4,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.3",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
    "pip-audit>=2.7",
    "mutmut>=2.5",
]

[project.scripts]
control-ofc-gui = "control_ofc.main:main"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Backstop against a wedged test (e.g. an unpatched modal dialog blocking on
# exec()). The autouse `_neutralize_modals` fixture in tests/conftest.py is the
# real guard; this is a last-resort cap. `thread` method is required — a
# blocked native Qt event loop won't honour SIGALRM (the `signal` method).
# Configured as ini options (not addopts) so a run without pytest-timeout
# installed degrades to a warning rather than failing to start.
timeout = 60
timeout_method = "thread"

# Mutation scope (run via /test-tests). After the 2.0.0 control-migration the
# GUI no longer evaluates curves or writes PWM (control_loop.py is deleted); the
# remaining author-side safety logic lives in profile_service.py — the schema
# migration ladder, the role-floor bake (DEC-095/162), and the demo/preview
# interpolate(). That is the meaningful Python mutation target now. (The daemon's
# runtime safety logic — profile.rs::validate, override expiry/fencing, the
# role-floor backstop — is Rust; mutate it with cargo-mutants, not mutmut.)
[tool.mutmut]
paths_to_mutate = ["src/control_ofc/services/profile_service.py"]
tests_dir = [
    "tests/test_profile_service.py",
    "tests/test_profile_service_daemon.py",
    "tests/test_role_classification_parity.py",
    "tests/test_aio_phase1.py",
    "tests/test_aio_phase2.py",
]

[tool.setuptools.package-data]
# Ship bundled theme presets inside the wheel so first-run install can
# copy them into the user's themes_dir.
"control_ofc" = ["ui/presets/*.json"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
